; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lwip/core/extr_netif.c_netif_set_link_up.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lwip/core/extr_netif.c_netif_set_link_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netif = type { i32, i64, i64 }

@NETIF_FLAG_LINK_UP = common dso_local global i32 0, align 4
@NETIF_FLAG_UP = common dso_local global i32 0, align 4
@NETIF_FLAG_ETHARP = common dso_local global i32 0, align 4
@NETIF_FLAG_IGMP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @netif_set_link_up(%struct.netif* %0) #0 {
  %2 = alloca %struct.netif*, align 8
  store %struct.netif* %0, %struct.netif** %2, align 8
  %3 = load %struct.netif*, %struct.netif** %2, align 8
  %4 = getelementptr inbounds %struct.netif, %struct.netif* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @NETIF_FLAG_LINK_UP, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %25, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @NETIF_FLAG_LINK_UP, align 4
  %11 = load %struct.netif*, %struct.netif** %2, align 8
  %12 = getelementptr inbounds %struct.netif, %struct.netif* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = or i32 %13, %10
  store i32 %14, i32* %12, align 8
  %15 = load %struct.netif*, %struct.netif** %2, align 8
  %16 = getelementptr inbounds %struct.netif, %struct.netif* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @NETIF_FLAG_UP, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %9
  br label %22

22:                                               ; preds = %21, %9
  %23 = load %struct.netif*, %struct.netif** %2, align 8
  %24 = call i32 @NETIF_LINK_CALLBACK(%struct.netif* %23)
  br label %25

25:                                               ; preds = %22, %1
  ret void
}

declare dso_local i32 @NETIF_LINK_CALLBACK(%struct.netif*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
